add streak page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  shared_preferences: ^2.5.3
 
   # iOS-style icons
   cupertino_icons: ^1.0.8
